src/client/scss/x/_font.scss
// Base Class Definition
// -------------------------
[class^="icon-"], [class*=" icon-"] {
  @include icon-font();
}

// variables
// -------------------------
$icon-align-justify: $fa-var-align-justify !default;
$icon-pencil: $fa-var-pencil !default;
$icon-remove: $fa-var-remove !default;
$icon-user: $fa-var-user!default;
$icon-power-off: $fa-var-power-off !default;
$icon-pencil: $fa-var-pencil !default;
$icon-calendar: $fa-var-calendar !default;
$icon-calendar-empty: $fa-var-calendar-o !default;
$icon-rotate: $fa-var-repeat !default;
$icon-trash: $fa-var-trash !default;

$icon-sheet-list: $fa-var-list-alt !default;
$icon-star: $fa-var-star !default;
$icon-lock: $fa-var-lock !default;
$icon-info-circle: $fa-var-info-circle !default;
$icon-pushpin: $fa-var-thumb-tack !default;
$icon-flag: $fa-var-flag !default;
$icon-home: $fa-var-home !default;
$icon-briefcase: $fa-var-briefcase !default;
$icon-forward: $fa-var-forward !default;
$icon-credit-card: $fa-var-credit-card !default;
$icon-bar-chart: $fa-var-bar-chart !default;
$icon-calendar: $fa-var-calendar !default;
$icon-massmail: $fa-var-paper-plane !default;

$icon-chevron-left: $fa-var-chevron-left !default;
$icon-chevron-right: $fa-var-chevron-right !default;
$icon-chevron-down: $fa-var-chevron-down !default;
$icon-chevron-up: $fa-var-chevron-up !default;
$icon-search: $fa-var-search !default;
$icon-refresh: $fa-var-refresh !default;
$icon-remove: $fa-var-remove !default;
$icon-sign-in: $fa-var-sign-in !default;
$icon-remove: $fa-var-times !default;
$icon-add: $fa-var-plus !default;
$icon-add-circle: $fa-var-plus-circle !default; 
$icon-external-link: $fa-var-external-link !default; 
$icon-minus: $fa-var-minus !default;
$icon-search: $fa-var-search !default;
$icon-open: $fa-var-eye !default;
$icon-check: $fa-var-check !default;
$icon-error: $fa-var-exclamation-circle !default;
$icon-tag: $fa-var-tag !default;
$icon-question: $fa-var-question !default;
$icon-question-circle: $fa-var-question-circle !default;

// icons
// -------------------------
.icon-glass:before { content: $icon-remove; }
.icon-user:before { content: $icon-user; }
.icon-power-off:before { content: $icon-power-off; }
.icon-pencil:before { content: $icon-pencil; }
.icon-login:before { content: $icon-sign-in }
.icon-remove:before { content: $icon-remove }
.icon-add:before { content: $icon-add }
.icon-add-circle:before { content: $icon-add-circle }
.icon-external-link:before { content: $icon-external-link }
.icon-minus:before { content: $icon-minus }
.icon-search:before { content: $icon-search }
.icon-open:before { content: $icon-open }
.icon-chevron-up:after { content: $icon-chevron-up }
.icon-chevron-down:after { content: $icon-chevron-down }
.icon-chevron-left:after { content: $icon-chevron-left }
.icon-chevron-right:after { content: $icon-chevron-right }

.icon-check:before { content: $icon-check }
.icon-warning-sign:after{ content: $icon-error }
.icon-rotate:before { content: $icon-rotate }
.icon-trash:before { content: $icon-trash }

.icon-sheet-list:before { content: $icon-sheet-list }
.icon-star:before { content: $icon-star }
.icon-lock:before { content: $icon-lock }
.icon-info-circle:before { content: $icon-info-circle }
.icon-pushpin:before { content: $icon-pushpin }
.icon-flag:before { content: $icon-flag }
.icon-home:before { content: $icon-home }
.icon-briefcase:before { content: $icon-briefcase }
.icon-forward:before { content: $icon-forward }
.icon-credit-card:before { content: $icon-credit-card }
.icon-bar-chart:before { content: $icon-bar-chart }
.icon-tag:before { content: $icon-tag }
.icon-calendar:before { content: $icon-calendar }
.icon-massmail:before { content: $icon-massmail }
.icon-question:before { content: $icon-question }
.icon-question-circle:before { content: $icon-question-circle }

